# Web-Server

./: .gitignore  CMakeLists.txt  README.md  make_script.sh
cmake/: CodeCoverageReportConfig.cmake
config/: config_parser.cc  config_parser.h  deploy_config  new_server_config  server_config
docker/: Dockerfile  cloudbuild.yaml  coverage.Dockerfile
folder1/: index.html
include/: config_parser.h  http_request.h  http_response.h  http_server.h  logging.h  mime_types.h  new_request_handler.h  request_handler.h  request_handler_factory.h  request_parser.h  response_handler.h  session.h  session_old.h
rplacecrud/data/: 1
rplacefiles/: index.html  login.html  script.js  signup.html  signup_redirect.html  style.css
rplacefiles_deploy/: index.html  login.html  script.js  signup.html  signup_redirect.html  style.css
rplaceusers/a/: 1
rplaceusers/aryan2/: 1
rplaceusers/cc/: 1
src/: http_request.cc  http_request.h  http_response.cc  http_response.h  http_server.cc  http_server.h  logging.cc  mime_types.cc  new_request_handler.cc  request_handler.cc  request_handler_factory.cc  request_parser.cc  request_parser.h  response_handler.cc  server_main.cc  session.cc  session.h  session_old.cc
static/folder1/: mime_txt_test.txt
tests/: comment_config  config_parser_test.cc  empty_port_config  extra_left_brace_config  incorrect_port_config  invalid_location_config  invalid_quotation_config  nested_config  no_semi_colon_config  proxy_config  request_handler_test.cc  request_parser_test.cc  response_handler_test.cc  session_test.cc  several_server_config
tests/config_parser_tests/: extra_right_brace_config  invalid_port_config  new_server_config  nonnumber_port_config
tests/integration_tests/: crud_handler_test.sh  curl_expected.txt  nc_expected.txt  parallel_test.sh  test.sh
tests/mime_tests/: index.html
tests/request_handler_tests/: bad_header_request_1  bad_http_request_2  bad_http_request_3  bad_http_request_4  bad_http_request_5  bad_http_version_request_3  bad_method_request  bad_request_response  bad_static_request  bad_static_request_response  good_http_version_request_1  good_http_version_request_2  good_lws_request_1  good_lws_request_2  good_request  good_request_response  good_request_with_bad_body  good_request_with_close_connection  good_request_with_good_body  good_request_with_open_connection  good_request_with_response_index_html  good_request_with_response_mime_zip_test  good_static_request  good_static_request_response
tests/request_parser_tests/: bad_header_request_2  bad_header_request_3  bad_http_request_1  bad_http_version_request_1  bad_http_version_request_2  bad_http_version_request_4  bad_method_start_request  good_lws_request_3  good_request  indeterminate_request
